# python-selenium

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: run_allure_reporter.yml  run_tests_dev.yml
Dev/: index.html
Dev/10/: index.html
Dev/10/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
Dev/10/export/: influxDbData.txt  prometheusData.txt
Dev/10/history/: duration-trend.json  history-trend.json  history.json
Dev/10/widgets/: behaviors.json  categories-trend.json  duration.json  executors.json  retry-trend.json  severity.json  suites.json  summary.json
Dev/11/: index.html
Dev/11/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
Dev/11/export/: influxDbData.txt  prometheusData.txt
Dev/11/history/: history.json
Dev/11/widgets/: behaviors.json  categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
Dev/12/: index.html
Dev/7/: index.html
Dev/8/: index.html
Dev/9/: index.html
Dev/last-history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
interfaces/: parabank_backend_api.py  practice_backend_api.py
pages/: auth_login_page.py  base_page.py  home_page.py  index_page.py  login_page.py  nav_bar_page.py
src/: main.py
tests/: conftest.py  test_backend.py  test_main.py  test_mypy_type_checking.py
tests/api/: test_user_api.py
tests/frontend/: test_user_login.py
(+187 files in other folders)
