[project]
name = "python-selenium"
version = "0.1.0"
description = ""
authors = [
    {name = "Shady Zahran",email = "zahran.shady@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false