[project]
name = "python-selenium"
version = "0.1.0"
description = ""
authors = [{ name = "Shady Zahran", email = "zahran.shady@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "selenium (>=4.27.1,<5.0.0)",
    "allure-pytest (>=2.13.5,<3.0.0)",
    "allure-python-commons (>=2.13.5,<3.0.0)",
    "mypy (>=1.14.1,<2.0.0)",
    "types-requests (>=2.32.0.20241016,<3.0.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = "pages"
addopts = ["--alluredir", "allure-results"]

[tool.mypy]
ignore_missing_imports = true
strict = true
disallow_untyped_decorators = false
